src/test/deca/context/invalid/added/double_decl_method.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  int get1(){
    return 1;
  }
  int get1(){
    return 2;
  }
}

{
}
